--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               </ul>
 
               <div class="work__links">
-                <a href="https://t.tantangeorgia.ge/" target="_blank" class="link__text">
+                <a href="https://test.tantangeorgia.ge/" target="_blank" class="link__text">
                   Visit Site <span>&rarr;</span>
                 </a>
                 <a href="#">
